...
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Passly</string>
    <string name="help_website"
        translatable="false">https://help.passbolt.com/</string>

...
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="got_it">Got it</string>
    <string name="try_again">Try again</string>
    <string name="continue_label">Continue</string>
    <string name="copied_info">%s copied!</string>
    <string name="stop_scanning">Stop scanning</string>
...
    <string name="common_json_schema_resource_validation_error">There was an error during validation of resource. Enable logs for more details.</string>
    <string name="common_json_schema_secret_validation_error">There was an error during validation of secret. Enable logs for more details.</string>
    <string name="common_maybe_later">Maybe later</string>
    <string name="common_cannot_create_resource_with_current_config">Cannot update a resource with current configuration</string>
    <string name="common_metadata_key_verification_failure">Could not verify metadata keys</string>
...
    <string name="input_default_hint">Enter %s</string>

    <string name="help_menu_help">Help</string>
    <string name="help_menu_access_logs">Access the logs</string>
    <string name="help_menu_visit_help_website">Visit help site</string>
    <string name="help_menu_why_scan_codes">Why scanning QR codes?</string>
    <string name="help_menu_enable_debug_logs">Enable debug logs</string>
    <string name="help_menu_import_profile_manually">Import your account manually</string>
    <string name="help_menu_import_account_kit">Import your account kit</string>
...
    <string name="auth_password_title">Passphrase</string>
    <string name="auth_sign_in">Sign In</string>
    <string name="auth_incorrect_passphrase">Incorrect passphrase or decryption error. Please try again.</string>
    <string name="auth_forgot_password_button">I forgot my passphrase</string>
    <string name="auth_forgot_password_title">Did you forgot your passphrase?</string>
    <string name="auth_forgot_password_message">Unfortunately you cannot access your data if you do not remember your passphrase. Please contact your administrator to unlock your account.</string>
    <string name="auth_enter_passphrase">Enter your passphrase</string>
    <string name="auth_exit_dialog_message">If you leave, you may need to set up your account again.</string>
    <string name="auth_biometric_title">Confirm using biometric</string>
...
    <string name="passkey_create_entry_description">Save passkey in Passly</string>

    <string name="dialog_encourage_autofill_header">Log In to your favourite apps in 3 seconds!</string>
    <string name="dialog_autofill_header">Autofill</string>
    <string name="dialog_encourage_autofill_accessibility_description">This option uses Android\'s Accessibility Service to autofill credentials in apps and browsers that do not support Android\'s native autofill. Tap the switch below to review what is accessed and grant your consent.</string>
...
    <string name="dialog_encourage_autofill_accessibility_other">Other</string>
    <string name="dialog_encourage_autofill_accessibility_title">Enable autofill via Accessibility Service</string>
    <string name="dialog_encourage_autofill_go_to_settings">Go to settings</string>
    <string name="dialog_encourage_autofill_service_header">Enable Autofill for most apps</string>
    <string name="dialog_encourage_autofill_service_description">On the Android settings screen, select Passly, turn on the toggle and press OK.
...
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_body">You need an existing account to get started. Sign in with your existing account on the desktop browser extension to connect it with the mobile device.</string>
    <string name="welcome_connect_to_existing_account">Connect to an existing account</string>
    <string name="welcome_no_account">I don’t have an account</string>
    <string name="welcome_create_account_dialog_title">How to create an account?</string>
...

    <string name="transfer_details_header">Scan QR codes to transfer your account details</string>
    <string name="transfer_details_scan_button">Scan QR codes</string>
    <string name="transfer_details_camera_access_dialog_title">Camera access required</string>
    <string name="transfer_details_camera_required_dialog_title">Camera required</string>
...

    <string name="scan_qr_exit_confirmation_dialog_message">If you leave, you will need to scan QR codes again.</string>
    <string name="scan_qr_exit_information_dialog_message">You will see a sequence of QR codes. We will scan these codes until the progress bar is full. Then you will be able to login!</string>
    <string name="scan_qr_exit_information_dialog_title">Scanning QR codes</string>
    <string name="scan_qr_keep_going">Scanning QR codes</string>
    <string name="scan_qr_aim_at_qr_code">Aim the camera at the QR Code</string>
...
    <string name="scan_qr_summary_no_network_title">No Internet connection</string>

    <string name="biometric_setup_use_biometric_button">Use Biometric</string>
    <string name="biometric_setup_configure_title">Configure Biometric</string>
    <string name="biometric_setup_configure_description">Unlock your secrets in a second.</string>
    <string name="biometric_setup_use_title">Use Biometric instead of passphrase</string>
    <string name="biometric_setup_use_description">Unlock your secrets in a second.</string>
...
    <string name="folder_details_location_separator"
        translatable="false">›</string>
    <string name="help_button_description">Help</string>

    <string name="create_folder_title">Create folder</string>
...
