...
 * @since v1.0
 */

package net.svaroh.passly.testtags.composetags

object Auth {
    const val AVATAR = "AuthAvatar"
    const val PASSPHRASE_INPUT = "AuthPassphraseInput"
    const val SIGN_IN_BUTTON = "AuthSignInButton"
}

